--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -63,7 +63,7 @@
   border-radius: 4px;
 }
 .sellButton {
-  background-color: #ff2636;
+  background-color: #D70F64;
   padding: 4px 24px;
   color: white;
   font-size: 16px;
